# srcsdk

./: .gitignore  .gitmodules  README.md
cmake/: .gitignore  CMakeLists.txt  createallprojects  createallprojects.bat
cmake/_cmake_scripts/: base.cmake  msvc_base.cmake  platform_dirs.cmake  posix_base.cmake  projects.cmake  windows_base.cmake
cmake/fgdlib/: fgdlib.cmake
cmake/hackmgr/: hackmgr.cmake
cmake/mathlib/: mathlib.cmake
cmake/raytrace/: raytrace.cmake
cmake/steamworks/: steamworks.cmake
cmake/tier0/: tier0.cmake
cmake/tier1/: tier1.cmake
cmake/tier2/: tier2.cmake
cmake/vgui_controls/: vgui_controls.cmake
cmake/vstdlib/: vstdlib.cmake
game/heist/: gameinfo.txt
game/mod_hl2mp/: gameinfo.txt
meson/: .gitattributes  .gitignore  build.sh  build_both.sh  build_linux.sh  build_windows.sh  gen_vpc.py  i686-gcc-linux  i686-gcc-linux-gnu  i686-mingw-windows  i686-w64-mingw32  i686-winegcc-linux  i686-winegcc-wine-gnu  meson.build  meson_options.txt  theheist.code-workspace  theheist.sublime-project  x86-linux-gnu
meson/subprojects/: JoltPhysics.wrap  RmlUi.wrap  recastnavigation.wrap  webm.wrap
meson/subprojects/actbusy/: meson.build
meson/subprojects/appframework/: meson.build
meson/subprojects/bitmap/: meson.build
meson/subprojects/bonesetup/: meson.build  meson_options.txt
meson/subprojects/choreoobjects/: meson.build
meson/subprojects/client/: meson.build
meson/subprojects/client_base/: meson.build
meson/subprojects/coplay/: meson.build  meson_options.txt
meson/subprojects/datamodel/: meson.build
meson/subprojects/dme_controls/: meson.build
meson/subprojects/dmserializers/: meson.build
meson/subprojects/dmxloader/: meson.build
meson/subprojects/fgdlib/: meson.build
meson/subprojects/foundry/: meson.build
meson/subprojects/game/: meson.build  meson_options.txt
meson/subprojects/game_loopback/: meson.build
meson/subprojects/game_shader_base/: meson.build
meson/subprojects/game_shader_dx9/: meson.build
meson/subprojects/game_shared/: meson.build
meson/subprojects/game_shared_base/: meson.build  meson_options.txt
meson/subprojects/game_switcher/: meson.build
meson/subprojects/gameevents/: meson.build  meson_options.txt
meson/subprojects/gamepadui_redirect/: meson.build
meson/subprojects/gameui/: meson.build
meson/subprojects/hackmgr/: meson.build  meson_options.txt
meson/subprojects/hammer_redirect/: meson.build
meson/subprojects/joltphysics_game/: meson.build
meson/subprojects/linux_hammer_ipc/: meson.build
meson/subprojects/matchmaking/: meson.build
meson/subprojects/mathlib/: meson.build
meson/subprojects/matsys_controls/: meson.build
meson/subprojects/movieobjects/: meson.build  meson_options.txt
meson/subprojects/packagefiles/JoltPhysics/: CMakeLists.txt  JoltPhysics.patch
meson/subprojects/packagefiles/recastnavigation/: recastnavigation.patch
meson/subprojects/particles/: meson.build
meson/subprojects/pet/: meson.build
meson/subprojects/raytrace/: meson.build  meson_options.txt
meson/subprojects/recastnavigation_game/: meson.build
meson/subprojects/responserules/: meson.build
meson/subprojects/rmlui_game/: meson.build  meson_options.txt
meson/subprojects/server/: meson.build
meson/subprojects/server_base/: meson.build
meson/subprojects/server_dedicated/: meson.build  meson_options.txt
meson/subprojects/server_dedicated_base/: meson.build
meson/subprojects/server_listen/: meson.build  meson_options.txt
meson/subprojects/server_listen_base/: meson.build
meson/subprojects/serverbrowser_redirect/: meson.build
meson/subprojects/sfmobjects/: meson.build
meson/subprojects/shadercompiler/: meson.build
meson/subprojects/shaderlib/: meson.build  meson_options.txt
meson/subprojects/source_base/: meson.build  meson_options.txt
meson/subprojects/source_game_base/: meson.build
meson/subprojects/steamworks/: meson.build  meson_options.txt
meson/subprojects/tier0/: meson.build
meson/subprojects/tier1/: meson.build
meson/subprojects/tier2/: meson.build
meson/subprojects/tier3/: meson.build
meson/subprojects/toolutils/: meson.build
meson/subprojects/vaudio_minimp3/: meson.build  meson_options.txt
meson/subprojects/vaudio_redirect/: meson.build
meson/subprojects/vcdblock/: meson.build
meson/subprojects/vgui_controls/: meson.build
meson/subprojects/video_services/: meson.build  meson_options.txt
meson/subprojects/vmt/: meson.build
meson/subprojects/vphysics/: meson.build  meson_options.txt
meson/subprojects/vstdlib/: meson.build  meson_options.txt
meson/subprojects/vtf/: meson.build
meson/subprojects/webm_game/: meson.build
src/: .gitattributes  .gitignore  createeverything.bat  creategameprojects  creategameprojects.bat  fix_registry.bat
src/bonesetup/: bone_setup.cpp
src/choreoobjects/: choreoactor.cpp  choreochannel.cpp  choreoevent.cpp  choreoobjects.vpc  choreoscene.cpp  sceneimage.cpp  scenetokenprocessor.cpp
src/common/: ConfigManager.h  IRunGameEngine.h  IVGuiModule.h  IVGuiModuleLoader.h  SteamCommon.h  blackbox_helper.h  debug_dll_check.cpp  dlloverride.cpp  ifilesystemopendialog.h  language.cpp  language.h  module_name.cpp  module_name.h  module_name_shared.h  proto_version.h  protocol.h  qlimits.h  randoverride.cpp  studiobyteswap.cpp  studiobyteswap.h  userid.h
src/engine/: iblackbox.h
src/fgdlib/: gamedata.cpp  gdclass.cpp  gdvar.cpp  wckeyvalues.cpp
src/game_loopback/: game_loopback.cpp  game_loopback.vpc
src/gamepadui_redirect/: gamepadui_redirect.cpp  gamepadui_redirect.vpc
src/gameui/: backgroundmenubutton.cpp  backgroundmenubutton.h  basemodframe.cpp  basemodframe.h  basemodpanel.cpp  basemodpanel.h  basemodui.h  basepanel.h  basesavegamedialog.cpp  basesavegamedialog.h  bitmapimagepanel.h  cdkeyentrydialog.h  commandcheckbutton.h  contentcontroldialog.cpp  contentcontroldialog.h  createmultiplayergamebotpage.cpp  createmultiplayergamebotpage.h  createmultiplayergamedialog.cpp  createmultiplayergamedialog.h  createmultiplayergamegameplaypage.cpp  customtabexplanationdialog.h  (+183 more)
src_funny/: .gitignore
(+2762 files in other folders)
