project('client_base','cpp','c')

assert(meson.get_compiler('cpp').get_argument_syntax() == 'gcc', 'only gnu compilers are supported')
assert(meson.get_compiler('c').get_argument_syntax() == 'gcc', 'only gnu compilers are supported')

src_root_dir = get_option('src_root_dir')

vgui_controls = subproject('vgui_controls')
vtf = subproject('vtf')
matsys_controls = subproject('matsys_controls')
bitmap = subproject('bitmap')
hackmgr = subproject('hackmgr')

public_dir = join_paths(src_root_dir,'public')
common_dir = join_paths(src_root_dir,'common')

shared_src_dir = join_paths(src_root_dir,'game','shared')

client_src_dir = join_paths(src_root_dir,'game','client')
client_game_ctrls_src_dir = join_paths(client_src_dir,'game_controls')

client_base_dep = declare_dependency(
	compile_args: [
		'-DDLLNAME=client',
		'-DCLIENT_DLL',
		'-DNO_STRING_T',
	],
	sources: files(
		join_paths(client_src_dir,'default','clientmode_default.cpp'),
		join_paths(client_src_dir,'default','prediction_default.cpp'),
		join_paths(client_src_dir,'default','input_default.cpp'),
		join_paths(client_src_dir,'default','viewrender_default.cpp'),
		join_paths(client_src_dir,'default','modemanager_default.cpp'),
		join_paths(client_src_dir,'default','vgui_int_default.cpp'),

		join_paths(client_src_dir,'C_Func_Monitor.cpp'),
		join_paths(client_src_dir,'history_resource.cpp'),
		join_paths(client_src_dir,'hud_weapon.cpp'),
		join_paths(client_src_dir,'achievement_notification_panel.cpp'),
		join_paths(client_src_dir,'alphamaterialproxy.cpp'),
		join_paths(client_src_dir,'animatedentitytextureproxy.cpp'),
		join_paths(client_src_dir,'animatedoffsettextureproxy.cpp'),
		join_paths(client_src_dir,'animatedtextureproxy.cpp'),
		join_paths(client_src_dir,'AnimateSpecificTextureProxy.cpp'),
		join_paths(client_src_dir,'baseanimatedtextureproxy.cpp'),
		join_paths(client_src_dir,'baseclientrendertargets.cpp'),
		join_paths(client_src_dir,'beamdraw.cpp'),
		join_paths(client_src_dir,'bone_merge_cache.cpp'),
		join_paths(client_src_dir,'c_ai_basehumanoid.cpp'),
		join_paths(client_src_dir,'c_ai_basenpc.cpp'),
		join_paths(client_src_dir,'c_baseanimating.cpp'),
		join_paths(client_src_dir,'c_baseanimatingoverlay.cpp'),
		join_paths(client_src_dir,'c_basecombatcharacter.cpp'),
		join_paths(client_src_dir,'c_basecombatweapon.cpp'),
		join_paths(client_src_dir,'c_basedoor.cpp'),
		join_paths(client_src_dir,'c_basetoggle.cpp'),
		join_paths(client_src_dir,'c_triggers.cpp'),
		join_paths(client_src_dir,'c_baseentity.cpp'),
		join_paths(client_src_dir,'c_baseflex.cpp'),
		join_paths(client_src_dir,'c_baseplayer.cpp'),
		join_paths(client_src_dir,'c_baseviewmodel.cpp'),
		join_paths(client_src_dir,'c_breakableprop.cpp'),
		join_paths(client_src_dir,'c_colorcorrection.cpp'),
		join_paths(client_src_dir,'c_colorcorrectionvolume.cpp'),
		join_paths(client_src_dir,'c_dynamiclight.cpp'),
		join_paths(client_src_dir,'c_entitydissolve.cpp'),
		join_paths(client_src_dir,'c_entityparticletrail.cpp'),
		join_paths(client_src_dir,'c_env_fog_controller.cpp'),
		join_paths(client_src_dir,'c_env_particlescript.cpp'),
		join_paths(client_src_dir,'c_env_projectedtexture.cpp'),
		join_paths(client_src_dir,'c_env_screenoverlay.cpp'),
		join_paths(client_src_dir,'c_env_tonemap_controller.cpp'),
		join_paths(client_src_dir,'c_fire_smoke.cpp'),
		join_paths(client_src_dir,'c_fish.cpp'),
		join_paths(client_src_dir,'c_func_areaportalwindow.cpp'),
		join_paths(client_src_dir,'c_func_breakablesurf.cpp'),
		join_paths(client_src_dir,'c_func_conveyor.cpp'),
		join_paths(client_src_dir,'c_func_dust.cpp'),
		join_paths(client_src_dir,'c_func_lod.cpp'),
		join_paths(client_src_dir,'c_func_brush.cpp'),
		join_paths(client_src_dir,'c_func_occluder.cpp'),
		join_paths(client_src_dir,'c_func_reflective_glass.cpp'),
		join_paths(client_src_dir,'c_func_rotating.cpp'),
		join_paths(client_src_dir,'c_func_smokevolume.cpp'),
		join_paths(client_src_dir,'c_func_tracktrain.cpp'),
		join_paths(client_src_dir,'c_gib.cpp'),
		join_paths(client_src_dir,'c_info_overlay_accessor.cpp'),
		join_paths(client_src_dir,'c_lightglow.cpp'),
		join_paths(client_src_dir,'C_MaterialModifyControl.cpp'),
		join_paths(client_src_dir,'c_particle_system.cpp'),
		join_paths(client_src_dir,'c_physbox.cpp'),
		join_paths(client_src_dir,'c_physicsprop.cpp'),
		join_paths(client_src_dir,'c_physmagnet.cpp'),
		join_paths(client_src_dir,'c_pixel_visibility.cpp'),
		join_paths(client_src_dir,'c_plasma.cpp'),
		join_paths(client_src_dir,'c_playerresource.cpp'),
		join_paths(client_src_dir,'c_point_camera.cpp'),
		join_paths(client_src_dir,'c_props.cpp'),
		join_paths(client_src_dir,'c_ragdoll_manager.cpp'),
		join_paths(client_src_dir,'c_rope.cpp'),
		join_paths(client_src_dir,'c_rumble.cpp'),
		join_paths(client_src_dir,'c_sceneentity.cpp'),
		join_paths(client_src_dir,'c_shadowcontrol.cpp'),
		join_paths(client_src_dir,'c_slideshow_display.cpp'),
		join_paths(client_src_dir,'c_soundscape.cpp'),
		join_paths(client_src_dir,'c_spotlight_end.cpp'),
		join_paths(client_src_dir,'c_sprite.cpp'),
		join_paths(client_src_dir,'c_sprite_perfmonitor.cpp'),
		join_paths(client_src_dir,'c_sun.cpp'),
		join_paths(client_src_dir,'c_team.cpp'),
		join_paths(client_src_dir,'c_tesla.cpp'),
		join_paths(client_src_dir,'c_user_message_register.cpp'),
		join_paths(client_src_dir,'c_vehicle_choreo_generic.cpp'),
		join_paths(client_src_dir,'c_vehicle_jeep.cpp'),
		join_paths(client_src_dir,'c_vguiscreen.cpp'),
		join_paths(client_src_dir,'c_waterbullet.cpp'),
		join_paths(client_src_dir,'C_WaterLODControl.cpp'),
		join_paths(client_src_dir,'c_world.cpp'),
		join_paths(client_src_dir,'camomaterialproxy.cpp'),
		join_paths(client_src_dir,'cdll_client_int.cpp'),
		join_paths(client_src_dir,'cdll_bounded_cvars.cpp'),
		join_paths(client_src_dir,'cdll_util.cpp'),
		join_paths(client_src_dir,'cl_mat_stub.cpp'),
		join_paths(client_src_dir,'classmap.cpp'),
		join_paths(client_src_dir,'client_factorylist.cpp'),
		join_paths(client_src_dir,'client_thinklist.cpp'),
		join_paths(client_src_dir,'clienteffectprecachesystem.cpp'),
		join_paths(client_src_dir,'cliententitylist.cpp'),
		join_paths(client_src_dir,'clientalphaproperty.cpp'),
		join_paths(client_src_dir,'clientleafsystem.cpp'),
		join_paths(client_src_dir,'clientmode_shared.cpp'),
		join_paths(client_src_dir,'clientshadowmgr.cpp'),
		join_paths(client_src_dir,'clientsideeffects.cpp'),
		join_paths(client_src_dir,'clientsideeffects_test.cpp'),
		join_paths(client_src_dir,'clientsteamcontext.cpp'),
		join_paths(client_src_dir,'colorcorrectionmgr.cpp'),
		join_paths(client_src_dir,'detailobjectsystem.cpp'),
		join_paths(client_src_dir,'EffectsClient.cpp'),
		join_paths(client_src_dir,'entityoriginmaterialproxy.cpp'),
		join_paths(client_src_dir,'flashlighteffect.cpp'),
		join_paths(client_src_dir,'functionproxy.cpp'),
		join_paths(client_src_dir,'fx_blood.cpp'),
		join_paths(client_src_dir,'fx_cube.cpp'),
		join_paths(client_src_dir,'fx_explosion.cpp'),
		join_paths(client_src_dir,'fx_fleck.cpp'),
		join_paths(client_src_dir,'fx_impact.cpp'),
		join_paths(client_src_dir,'fx_interpvalue.cpp'),
		join_paths(client_src_dir,'fx_quad.cpp'),
		join_paths(client_src_dir,'fx_shelleject.cpp'),
		join_paths(client_src_dir,'fx_staticline.cpp'),
		join_paths(client_src_dir,'fx_tracer.cpp'),
		join_paths(client_src_dir,'fx_trail.cpp'),
		join_paths(client_src_dir,'fx_water.cpp'),
		join_paths(client_src_dir,'gametrace_client.cpp'),
		join_paths(client_src_dir,'glow_outline_effect.cpp'),
		join_paths(client_src_dir,'glow_overlay.cpp'),
		join_paths(client_src_dir,'hud.cpp'),
		join_paths(client_src_dir,'hud_animationinfo.cpp'),
		join_paths(client_src_dir,'hud_basechat.cpp'),
		join_paths(client_src_dir,'hud_chat.cpp'),
		join_paths(client_src_dir,'hud_basetimer.cpp'),
		join_paths(client_src_dir,'hud_bitmapnumericdisplay.cpp'),
		join_paths(client_src_dir,'hud_closecaption.cpp'),
		join_paths(client_src_dir,'hud_crosshair.cpp'),
		join_paths(client_src_dir,'hud_element_helper.cpp'),
		join_paths(client_src_dir,'hud_hintdisplay.cpp'),
		join_paths(client_src_dir,'hud_msg.cpp'),
		join_paths(client_src_dir,'hud_numericdisplay.cpp'),
		join_paths(client_src_dir,'hud_pdump.cpp'),
		join_paths(client_src_dir,'hud_redraw.cpp'),
		join_paths(client_src_dir,'hud_vehicle.cpp'),
		join_paths(client_src_dir,'in_camera.cpp'),
		join_paths(client_src_dir,'in_joystick.cpp'),
		join_paths(client_src_dir,'in_main.cpp'),
		join_paths(client_src_dir,'initializer.cpp'),
		join_paths(client_src_dir,'interpolatedvar.cpp'),
		join_paths(client_src_dir,'IsNPCProxy.cpp'),
		join_paths(client_src_dir,'lampbeamproxy.cpp'),
		join_paths(client_src_dir,'lamphaloproxy.cpp'),
		join_paths(client_src_dir,'mathproxy.cpp'),
		join_paths(client_src_dir,'matrixproxy.cpp'),
		join_paths(client_src_dir,'menu.cpp'),
		join_paths(client_src_dir,'message.cpp'),
		join_paths(client_src_dir,'movehelper_client.cpp'),
		join_paths(client_src_dir,'panelmetaclassmgr.cpp'),
		join_paths(client_src_dir,'particle_collision.cpp'),
		join_paths(client_src_dir,'particle_litsmokeemitter.cpp'),
		join_paths(client_src_dir,'particle_proxies.cpp'),
		join_paths(client_src_dir,'particle_simple3d.cpp'),
		join_paths(client_src_dir,'particlemgr.cpp'),
		join_paths(client_src_dir,'particles_attractor.cpp'),
		join_paths(client_src_dir,'particles_ez.cpp'),
		join_paths(client_src_dir,'particles_localspace.cpp'),
		join_paths(client_src_dir,'particles_new.cpp'),
		join_paths(client_src_dir,'particles_simple.cpp'),
		join_paths(client_src_dir,'perfvisualbenchmark.cpp'),
		join_paths(client_src_dir,'physics.cpp'),
		join_paths(client_src_dir,'physics_main_client.cpp'),
		join_paths(client_src_dir,'physpropclientside.cpp'),
		join_paths(client_src_dir,'playerandobjectenumerator.cpp'),
		join_paths(client_src_dir,'playerspawncache.cpp'),
		join_paths(client_src_dir,'prediction.cpp'),
		join_paths(client_src_dir,'proxyentity.cpp'),
		join_paths(client_src_dir,'ProxyHealth.cpp'),
		join_paths(client_src_dir,'proxyplayer.cpp'),
		join_paths(client_src_dir,'proxypupil.cpp'),
		join_paths(client_src_dir,'ragdoll.cpp'),
		join_paths(client_src_dir,'recvproxy.cpp'),
		join_paths(client_src_dir,'basepresence.cpp'),
		join_paths(client_src_dir,'ScreenSpaceEffects.cpp'),
		join_paths(client_src_dir,'simple_keys.cpp'),
		join_paths(client_src_dir,'splinepatch.cpp'),
		join_paths(client_src_dir,'spritemodel.cpp'),
		join_paths(client_src_dir,'studio_stats.cpp'),
		join_paths(client_src_dir,'text_message.cpp'),
		join_paths(client_src_dir,'texturescrollmaterialproxy.cpp'),
		join_paths(client_src_dir,'timematerialproxy.cpp'),
		join_paths(client_src_dir,'toggletextureproxy.cpp'),
		join_paths(client_src_dir,'vgui_avatarimage.cpp'),
		join_paths(client_src_dir,'vgui_basepanel.cpp'),
		join_paths(client_src_dir,'vgui_bitmapbutton.cpp'),
		join_paths(client_src_dir,'vgui_bitmapimage.cpp'),
		join_paths(client_src_dir,'vgui_bitmappanel.cpp'),
		join_paths(client_src_dir,'vgui_schemevisualizer.cpp'),
		join_paths(client_src_dir,'vgui_centerstringpanel.cpp'),
		join_paths(client_src_dir,'vgui_consolepanel.cpp'),
		join_paths(client_src_dir,'vgui_debugoverlaypanel.cpp'),
		join_paths(client_src_dir,'vgui_fpspanel.cpp'),
		join_paths(client_src_dir,'vgui_game_viewport.cpp'),
		join_paths(client_src_dir,'vgui_grid.cpp'),
		join_paths(client_src_dir,'vgui_int.cpp'),
		join_paths(client_src_dir,'vgui_loadingdiscpanel.cpp'),
		join_paths(client_src_dir,'vgui_messagechars.cpp'),
		join_paths(client_src_dir,'vgui_netgraphpanel.cpp'),
		join_paths(client_src_dir,'vgui_slideshow_display_screen.cpp'),
		join_paths(client_src_dir,'view.cpp'),
		join_paths(client_src_dir,'view_beams.cpp'),
		join_paths(client_src_dir,'view_effects.cpp'),
		join_paths(client_src_dir,'view_scene.cpp'),
		join_paths(client_src_dir,'viewangleanim.cpp'),
		join_paths(client_src_dir,'ViewConeImage.cpp'),
		join_paths(client_src_dir,'viewdebug.cpp'),
		join_paths(client_src_dir,'viewpostprocess.cpp'),
		join_paths(client_src_dir,'viewrender.cpp'),
		join_paths(client_src_dir,'warp_overlay.cpp'),
		join_paths(client_src_dir,'WaterLODMaterialProxy.cpp'),
		join_paths(client_src_dir,'weapon_selection.cpp'),
		join_paths(client_src_dir,'weapons_resource.cpp'),
		join_paths(client_src_dir,'WorldDimsProxy.cpp'),
		join_paths(client_src_dir,'vgui_video.cpp'),
		join_paths(client_src_dir,'vgui_video_player.cpp'),
		join_paths(client_src_dir,'c_vote_controller.cpp'),
		join_paths(client_src_dir,'hltvcamera.cpp'),
		join_paths(client_src_dir,'hud_lcd.cpp'),
		join_paths(client_src_dir,'in_mouse.cpp'),
		join_paths(client_src_dir,'rendertexture.cpp'),
		join_paths(client_src_dir,'c_basetempentity.cpp'),
		join_paths(client_src_dir,'c_effects.cpp'),
		join_paths(client_src_dir,'c_impact_effects.cpp'),
		join_paths(client_src_dir,'c_movie_explosion.cpp'),
		join_paths(client_src_dir,'c_particle_fire.cpp'),
		join_paths(client_src_dir,'c_particle_smokegrenade.cpp'),
		join_paths(client_src_dir,'c_prop_vehicle.cpp'),
		join_paths(client_src_dir,'c_recipientfilter.cpp'),
		join_paths(client_src_dir,'c_smoke_trail.cpp'),
		join_paths(client_src_dir,'c_smokestack.cpp'),
		join_paths(client_src_dir,'c_steamjet.cpp'),
		join_paths(client_src_dir,'c_stickybolt.cpp'),
		join_paths(client_src_dir,'c_te.cpp'),
		join_paths(client_src_dir,'c_te_armorricochet.cpp'),
		join_paths(client_src_dir,'c_te_basebeam.cpp'),
		join_paths(client_src_dir,'c_te_beamentpoint.cpp'),
		join_paths(client_src_dir,'c_te_beaments.cpp'),
		join_paths(client_src_dir,'c_te_beamfollow.cpp'),
		join_paths(client_src_dir,'c_te_beamlaser.cpp'),
		join_paths(client_src_dir,'c_te_beampoints.cpp'),
		join_paths(client_src_dir,'c_te_beamring.cpp'),
		join_paths(client_src_dir,'c_te_beamringpoint.cpp'),
		join_paths(client_src_dir,'c_te_beamspline.cpp'),
		join_paths(client_src_dir,'c_te_bloodsprite.cpp'),
		join_paths(client_src_dir,'c_te_bloodstream.cpp'),
		join_paths(client_src_dir,'c_te_breakmodel.cpp'),
		join_paths(client_src_dir,'c_te_bspdecal.cpp'),
		join_paths(client_src_dir,'c_te_bubbles.cpp'),
		join_paths(client_src_dir,'c_te_bubbletrail.cpp'),
		join_paths(client_src_dir,'c_te_clientprojectile.cpp'),
		join_paths(client_src_dir,'c_te_decal.cpp'),
		join_paths(client_src_dir,'c_te_dynamiclight.cpp'),
		join_paths(client_src_dir,'c_te_effect_dispatch.cpp'),
		join_paths(client_src_dir,'c_te_energysplash.cpp'),
		join_paths(client_src_dir,'c_te_explosion.cpp'),
		join_paths(client_src_dir,'c_te_fizz.cpp'),
		join_paths(client_src_dir,'c_te_footprint.cpp'),
		join_paths(client_src_dir,'c_te_glassshatter.cpp'),
		join_paths(client_src_dir,'c_te_glowsprite.cpp'),
		join_paths(client_src_dir,'c_te_impact.cpp'),
		join_paths(client_src_dir,'c_te_killplayerattachments.cpp'),
		join_paths(client_src_dir,'c_te_largefunnel.cpp'),
		join_paths(client_src_dir,'c_te_legacytempents.cpp'),
		join_paths(client_src_dir,'c_te_muzzleflash.cpp'),
		join_paths(client_src_dir,'c_te_particlesystem.cpp'),
		join_paths(client_src_dir,'c_te_physicsprop.cpp'),
		join_paths(client_src_dir,'c_te_playerdecal.cpp'),
		join_paths(client_src_dir,'c_te_projecteddecal.cpp'),
		join_paths(client_src_dir,'c_te_showline.cpp'),
		join_paths(client_src_dir,'c_te_smoke.cpp'),
		join_paths(client_src_dir,'c_te_sparks.cpp'),
		join_paths(client_src_dir,'c_te_sprite.cpp'),
		join_paths(client_src_dir,'c_te_spritespray.cpp'),
		join_paths(client_src_dir,'c_te_worlddecal.cpp'),
		join_paths(client_src_dir,'c_te_concussiveexplosion.cpp'),
		join_paths(client_src_dir,'c_tracer.cpp'),
		join_paths(client_src_dir,'fx.cpp'),
		join_paths(client_src_dir,'fx_discreetline.cpp'),
		join_paths(client_src_dir,'fx_envelope.cpp'),
		join_paths(client_src_dir,'fx_line.cpp'),
		join_paths(client_src_dir,'fx_sparks.cpp'),
		join_paths(client_src_dir,'particlesphererenderer.cpp'),
		join_paths(client_src_dir,'smoke_fog_overlay.cpp'),
		join_paths(client_src_dir,'entity_client_tools.cpp'),
		join_paths(client_src_dir,'toolframework_client.cpp'),
		#join_paths(client_src_dir,'c_team_objectiveresource.cpp'),
		#join_paths(client_src_dir,'c_team_train_watcher.cpp'),
		join_paths(client_src_dir,'hud_voicestatus.cpp'),
		join_paths(client_src_dir,'c_weapon_cubemap.cpp'),
		join_paths(client_src_dir,'c_lights.cpp'),
		join_paths(client_src_dir,'worldlight.cpp'),
		join_paths(client_src_dir,'vis_tester.cpp'),
		join_paths(client_src_dir,'c_postprocesscontroller.cpp'),
		join_paths(client_src_dir,'materialproxydict.cpp'),
		join_paths(client_src_dir,'c_physics_prop_statue.cpp'),
		join_paths(client_src_dir,'c_entityfreezing.cpp'),
		join_paths(client_src_dir,'c_func_movelinear.cpp'),
		join_paths(client_src_dir,'c_entityflame.cpp'),
		join_paths(client_src_dir,'train.cpp'),
		join_paths(client_src_dir,'game_client.cpp'),
		join_paths(client_src_dir,'foundryhelpers_client.cpp'),
		join_paths(client_src_dir,'modelrendersystem.cpp'),
		join_paths(client_src_dir,'gameui_sys.cpp'),
		join_paths(shared_src_dir,'toolframework_shared.cpp'),
		join_paths(client_src_dir,'recast','recast_debugdraw.cpp'),
		join_paths(client_src_dir,'recast','recast_debugdrawmesh.cpp'),
		join_paths(client_src_dir,'recast','recast_detourdebugdraw.cpp'),
		join_paths(client_src_dir,'recast','recast_recastdebugdraw.cpp'),
		join_paths(client_src_dir,'mapbase','c_func_fake_worldportal.cpp'),
		join_paths(client_game_ctrls_src_dir,'baseviewport.cpp'),
		join_paths(client_game_ctrls_src_dir,'basemodelpanel_matsys.cpp'),
		join_paths(client_game_ctrls_src_dir,'basemodelpanel_game.cpp'),
		join_paths(client_game_ctrls_src_dir,'ClientScoreBoardDialog.cpp'),
		join_paths(client_game_ctrls_src_dir,'commandmenu.cpp'),
		join_paths(client_game_ctrls_src_dir,'intromenu.cpp'),
		#join_paths(client_game_ctrls_src_dir,'MapOverview.cpp'),
		join_paths(client_game_ctrls_src_dir,'NavProgress.cpp'),
		join_paths(client_game_ctrls_src_dir,'SpectatorGUI.cpp'),
		join_paths(client_game_ctrls_src_dir,'teammenu.cpp'),
		join_paths(client_game_ctrls_src_dir,'vguitextwindow.cpp'),
		join_paths(client_game_ctrls_src_dir,'IconPanel.cpp'),
		join_paths(shared_src_dir,'voice_status.cpp'),
		join_paths(shared_src_dir,'voice_banmgr.cpp'),
		join_paths(shared_src_dir,'cam_thirdperson.cpp'),
		join_paths(shared_src_dir,'particle_property.cpp'),
		join_paths(shared_src_dir,'debugoverlay_shared.cpp'),
		join_paths(public_dir,'jigglebones.cpp'),
		join_paths(public_dir,'posedebugger.cpp'),
		join_paths(public_dir,'dt_recv.cpp'),
		join_paths(public_dir,'dt_utlvector_recv.cpp'),
		join_paths(public_dir,'client_class.cpp'),
		join_paths(public_dir,'renamed_recvtable_compat.cpp'),
	),
	include_directories: include_directories(
		client_src_dir,
		client_game_ctrls_src_dir
	),
	dependencies: [
		vgui_controls.get_variable('vgui_controls_dep'),
		matsys_controls.get_variable('matsys_controls_dep'),
		vtf.get_variable('vtf_dep'),
		bitmap.get_variable('bitmap_dep'),
		hackmgr.get_variable('hackmgr_dep'),
	]
)
